# ToDoList

./: CMakeLists.txt  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  main.cpp
Proto/: date.proto  persist_error.proto  priority.proto  requests.proto  responses.proto  service.proto  storage_error.proto  task.proto  task_id.proto
src/: Client.cpp  DateTime.cpp  DateTime.h  DueTime.cpp  DueTime.h  DueTimeTest.cpp  FullTask.cpp  FullTask.h  FullTaskDTO.cpp  FullTaskDTO.h  GenerateID.cpp  GenerateID.h  Server.cpp  Task.cpp  Task.h  TaskID.cpp  TaskID.h  TaskManager.cpp  TaskManager.h  TaskManagerDTO.cpp  TaskManagerDTO.h  TaskManagerHidden.cpp  TaskManagerHidden.h  TaskOutput.h  TestTask.cpp  UUID.cpp  UUID.h  main.cpp  taskID.cpp  taskID.h  taskIDTest.cpp
src/API/: FullTaskDTO.cpp  FullTaskDTO.h  GenerateID.h  TaskDTO.cpp  TaskDTO.h  TaskFactory.cpp  TaskManager.cpp  TaskManager.h  TaskManagerDTO.cpp  TaskManagerDTO.h  TaskOutput.cpp  TaskOutput.h  TaskService.cpp  TaskService.h  TaskView.cpp  TaskView.h
src/CLI/: AvailableCommands.cpp  AvailableCommands.h  CommandParser.cpp  CommandParser.h  CommandStateMachine.cpp  CommandStateMachine.h  CommandStateMachineCreator.h  CommandStateMachineFactory.h  ConsoleIO.cpp  ConsoleIO.h  Context.cpp  Context.h  ContextInterface.h  ErrorType.h  FakeService.cpp  FakeService.h  Modifier.h  Operation.cpp  Operation.h  ParamStateMachine.cpp  ParamStateMachine.h  ParamStateMachineCreator.h  ParamStateMachineFactory.h  StateFactory.cpp  StateFactory.h  StateInterface.h  StateMachine.cpp  StateMachine.h  StateStorage.cpp  StateStorage.h  StateType.h  StatesGraphType.h  StatesMachineType.h
src/CLI/Commands/: AvailableCommands.h  Command.h  CommandParser.h  CommandToStateType.h
src/CLI/Context/: AddTaskBuffer.cpp  AddTaskBuffer.h  BufferInterface.h  Context.cpp  Context.h  FilepathBuffer.cpp  FilepathBuffer.h  IDBuffer.cpp  IDBuffer.h  PostponeBuffer.cpp  PostponeBuffer.h  ShowListBuffer.cpp  ShowListBuffer.h
src/CLI/IO/: ConsoleIO.cpp  ConsoleIO.h  IOInterface.h
src/CLI/States/: AddSubtaskState.cpp  AddSubtaskState.h  AddTaskState.cpp  AddTaskState.h  CompleteTaskState.cpp  CompleteTaskState.h  ExitState.cpp  ExitState.h  Factory.cpp  Factory.h  GetTaskListState.cpp  GetTaskListState.h  GetTaskState.cpp  GetTaskState.h  MainMenuState.cpp  MainMenuState.h  NewDateParamState.cpp  NewDateParamState.h  PostponeTaskState.cpp  PostponeTaskState.h  RemoveTaskState.cpp  RemoveTaskState.h  StartState.cpp  StartState.h  StateFactory.cpp  StateFactory.h  StateInterface.h  StateResult.cpp  StateResult.h  StateType.h  StatesMap.h  TaskListState.cpp  TaskListState.h  TaskState.cpp  TaskState.h  Validator.h  ViewTaskListState.cpp  ViewTaskListState.h  ViewTaskState.cpp  ViewTaskState.h
src/CLI/States/AddingTask/: AddTaskContext.cpp  AddTaskContext.h  AddTaskExitState.cpp  AddTaskExitState.h  AddTaskStartState.cpp  AddTaskStartState.h  AddTaskStateInterface.h  AddTaskStateMachine.cpp  AddTaskStateMachine.h  DateParamState.cpp  DateParamState.h  LabelParamState.cpp  LabelParamState.h  NameParamState.cpp  NameParamState.h  ParentTaskParamState.cpp  ParentTaskParamState.h  PriorityParamState.cpp  PriorityParamState.h
src/MemoryModel/: Date.h  DateTime.cpp  DateTime.h  DueTime.cpp  DueTime.h  Error.cpp  Error.h  FullTask.cpp  FullTask.h  FullTaskDTO.cpp  GenerateID.cpp  GenerateID.h  IDGenerator.cpp  IDGenerator.h  OperationResult.cpp  OperationResult.h  Priority.cpp  Priority.h  Task.cpp  Task.h  TaskEntity.cpp  TaskEntity.h  TaskFactory.cpp  TaskFactory.h  TaskID.cpp  TaskID.h  TaskOwner.cpp  TaskOwner.h  TaskServiceStorage.cpp  TaskServiceStorage.h  TaskStorage.cpp  TaskStorage.h  TaskView.cpp  TaskView.h
src/MemoryModel/Storage/: Error.h  FullStorage.cpp  FullStorage.h  FullStorageInterface.h  IDGenerator.cpp  IDGenerator.h  OperationResult.cpp  OperationResult.h  TaskStorage.cpp  TaskStorage.h  TaskStorageInterface.h  TaskView.cpp  TaskView.h
src/MemoryModel/Task/: Date.cpp  Task.h  TaskEntity.cpp  TaskEntity.h  TaskID.cpp  TaskID.h
src/Proto/: service.proto
src/core/API/: ApiConverter.h  GRPCConverter.h  GRPCServer.cpp  GRPCServer.h  OperationResult.h  Priority.cpp  Priority.h  TaskDTO.cpp  TaskDTO.h  TaskService.cpp  TaskService.h  TaskServiceClient.cpp  TaskServiceClient.h  TaskServiceInterface.h
src/core/Persister/: FilePersister.cpp  FilePersister.h  Persister.cpp  Persister.h  PersisterConverter.h  PersisterInterface.h  ProtoConverter.h  SerializationError.h
tests/: DateTimeTest.cpp  DueTimeTest.cpp  FullTaskTest.cpp  GenerateIDTest.cpp  TaskEntityTest.cpp  TaskIDTest.cpp  TaskManagerTest.cpp  TaskServiceTest.cpp  TaskViewTest.cpp  TestTask.cpp  taskIDTest.cpp
tests/API/: TaskDTOTest.cpp  TaskServiceTest.cpp
tests/CLI/: AvailableCommandsTest.cpp  CommandParserTest.cpp  CommandStateMachineTest.cpp  MainMenuTest.cpp  ParamStateMachineTest.cpp  SaveLoadCommandsTest.cpp  StateFactoryTest.h  StateMachineTest.cpp  TaskParamsTest.cpp  base.cpp
tests/CLI/CommandStates/: AddSubtaskStateTest.cpp  AddTaskStateTest.cpp  CompleteTaskStateTest.cpp  ExitStateTest.cpp  MainMenuStateTest.cpp  PersistTasksStateTest.cpp  PostponeTaskTest.cpp  RemoveTaskStateTest.cpp  ViewTaskListStateTest.cpp  ViewTaskStateTest.cpp
tests/CLI/ParamStates/: DateParamStateTest.cpp  FilenameParamStateTest.cpp  IDParamStateTest.cpp  LabelParamStateTest.cpp  ModifierParamStateTest.cpp  NameParamStateTest.cpp  PriorityParamStateTest.cpp  SortedParamStateTest.cpp
tests/MemoryModel/: DateTimeTest.cpp  ErrorTest.cpp  FullStorageTest.cpp  GenerateIDTest.cpp  OperationResultTest.cpp  TaskEntityTest.cpp  TaskIDTest.cpp  TaskServiceStorageTest.cpp  TaskStorageTest.cpp  TaskTest.cpp  TaskViewTest.cpp
tests/Mocks/: MockGenerator.h  MockIO.h  MockModel.h  MockService.h  MockState.h  MockStorage.h  MockView.h
tests/core/: asdf.cpp
tests/core/API/: GRPCServerTest.cpp  OperationResultTest.cpp  PriorityTest.cpp  TaskDTOTest.cpp  TaskServiceTest.cpp
tests/core/Persister/: FilePersisterTest.cpp  PersisterConverterTest.cpp  ProtoConvertersTest.cpp
(+178 files in other folders)
